--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ body {
         }
     };
 
-    mapkit.importGeoJSON('swiss-mask.geojson', geoJSONParserDelegate);
+    mapkit.importGeoJSON('india_states.geojson', geoJSONParserDelegate);
 
 </script>
 </body>
